--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             </div>
             <div class="header_right">
                 <div class="header_right-image">
-                    <img src="/images/Layer1.png" alt="">
+                    <img src="./images/layer1.png" alt="">
                 </div>
             </div>
         </div>
@@ -104,7 +104,7 @@
         <div class="container courses_container">
             <article class="course">
                 <div class="course_image">
-                    <img src="images/Free Vector _ Code typing concept illustration.jfif" alt="">
+                    <img src="./images/Free Vector _ Code typing concept illustration.jfif" alt="">
                 </div>
                 <div class="course_info">
                     <h4>Fullstack Web Development</h4>
@@ -115,7 +115,7 @@
 
             <article class="course">
                 <div class="course_image">
-                    <img src="images/Bafta brochure covers – in pictures.jfif" alt="">
+                    <img src="./images/Bafta brochure covers – in pictures.jfif" alt="">
                 </div>
                 <div class="course_info">
                     <h4>Financial Management for Business Success</h4>
@@ -126,7 +126,7 @@
 
             <article class="course">
                 <div class="course_image">
-                    <img src="images/MLM Software based on smart contract.jfif" alt="">
+                    <img src="./images/MLM Software based on smart contract.jfif" alt="">
                 </div>
                 <div class="course_info">
                     <h4>Blockchain All in One Mastery </h4>
