--- a/about.html
+++ b/about.html
@@ -14,20 +14,20 @@
     <link href="https://fonts.googleapis.com/css2?family=Exo:wght@300;400;500;600;700;900&display=swap" rel="stylesheet">
     
     <!-- css -->
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/about.css">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/about.css">
 
 </head>
 <body>
     <!-- navbar -->
     <nav>
         <div class="container nav_container">
-            <a href="index.html"><h4>EDUMANIA</h4></a>
+            <a href="./index.html"><h4>EDUMANIA</h4></a>
             <ul class="nav_menu">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="course.html">Course</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="./index.html">Home</a></li>
+                <li><a href="./about.html">About</a></li>
+                <li><a href="./course.html">Course</a></li>
+                <li><a href="./contact.html">Contact</a></li>
             </ul>
             <button id="open-menu-btn"><i class="fa-solid fa-bars"></i></button>
             <button id="close-menu-btn"><i class="fa-solid fa-close"></i></button>
@@ -40,7 +40,7 @@
     <section class="about_achievements">
         <div class="container about_achievements-container">
             <div class="about_achievements-left">
-                <img src="images/about.png" alt="">
+                <img src="./images/about.png" alt="">
             </div>
             <div class="about_achievements-right">
                 <h1>Achievements</h1>
@@ -74,7 +74,7 @@
         <div class="container team_container">
             <article class="team_member">
                 <div class="team_member-image">
-                    <img src="images/Person/ayo-ogunseinde-6W4F62sN_yI-unsplash.jpg" alt="">
+                    <img src="./images/Person/ayo-ogunseinde-6W4F62sN_yI-unsplash.jpg" alt="">
                 </div>
                 <div class="team_member-info">
                     <h4>Celine Dion</h4>
@@ -88,7 +88,7 @@
             </article>
             <article class="team_member">
                 <div class="team_member-image">
-                    <img src="images/Person/seth-doyle-vmBik4xv27s-unsplash.jpg" alt="">
+                    <img src="./images/Person/seth-doyle-vmBik4xv27s-unsplash.jpg" alt="">
                 </div>
                 <div class="team_member-info">
                     <h4>Seth jo</h4>
@@ -102,7 +102,7 @@
             </article>
             <article class="team_member">
                 <div class="team_member-image">
-                    <img src="images/Person/matheus-ferrero-W7b3eDUb_2I-unsplash.jpg" alt="">
+                    <img src="./images/Person/matheus-ferrero-W7b3eDUb_2I-unsplash.jpg" alt="">
                 </div>
                 <div class="team_member-info">
                     <h4>Mona Lisa</h4>
@@ -116,7 +116,7 @@
             </article>
             <article class="team_member">
                 <div class="team_member-image">
-                    <img src="images/Person/jurica-koletic-7YVZYZeITc8-unsplash.jpg" alt="">
+                    <img src="./images/Person/jurica-koletic-7YVZYZeITc8-unsplash.jpg" alt="">
                 </div>
                 <div class="team_member-info">
                     <h4>Felix jo</h4>
@@ -130,7 +130,7 @@
             </article>
             <article class="team_member">
                 <div class="team_member-image">
-                    <img src="images/Person/joseph-gonzalez-iFgRcqHznqg-unsplash.jpg" alt="">
+                    <img src="./images/Person/joseph-gonzalez-iFgRcqHznqg-unsplash.jpg" alt="">
                 </div>
                 <div class="team_member-info">
                     <h4>Luis garcia</h4>
@@ -144,7 +144,7 @@
             </article>
             <article class="team_member">
                 <div class="team_member-image">
-                    <img src="images/Person/foto-sushi-6anudmpILw4-unsplash.jpg" alt="">
+                    <img src="./images/Person/foto-sushi-6anudmpILw4-unsplash.jpg" alt="">
                 </div>
                 <div class="team_member-info">
                     <h4>James Lar</h4>
@@ -158,7 +158,7 @@
             </article>
             <article class="team_member">
                 <div class="team_member-image">
-                    <img src="images/Person/edward-cisneros-_H6wpor9mjs-unsplash.jpg" alt="">
+                    <img src="./images/Person/edward-cisneros-_H6wpor9mjs-unsplash.jpg" alt="">
                 </div>
                 <div class="team_member-info">
                     <h4>Martha</h4>
@@ -172,7 +172,7 @@
             </article>
             <article class="team_member">
                 <div class="team_member-image">
-                    <img src="images/Person/christopher-campbell-rDEOVtE7vOs-unsplash.jpg" alt="">
+                    <img src="./images/Person/christopher-campbell-rDEOVtE7vOs-unsplash.jpg" alt="">
                 </div>
                 <div class="team_member-info">
                     <h4>Sofia George</h4>
@@ -193,17 +193,17 @@
     <footer>
         <div class="container footer_container">
             <div class="footer_1">
-                <a href="index.html" class="footer_logo"><h4>EDUMANIA</h4></a>
+                <a href="./index.html" class="footer_logo"><h4>EDUMANIA</h4></a>
                 <p>Unlock your potential with our diverse range of online courses !</p>
             </div>
             
             <div class="footer_2">
                 <h4>Links</h4>
                 <ul class="permalinks">
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="course.html">Course</a></li>
-                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="./index.html">Home</a></li>
+                    <li><a href="./about.html">About</a></li>
+                    <li><a href="./course.html">Course</a></li>
+                    <li><a href="./contact.html">Contact</a></li>
                 </ul>
             </div>
 
@@ -236,6 +236,6 @@
     <!-- END Footer -->
 
 
-    <script src="js/script.js"></script>
+    <script src="./js/script.js"></script>
 </body>
 </html>
