--- a/course.html
+++ b/course.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Edumania</title>
+    <title>Edumania-Courses</title>
 
     <!-- fontawesome-icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
@@ -14,7 +14,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Exo:wght@300;400;500;600;700;900&display=swap" rel="stylesheet">
     
     <!-- css -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <style>
         .courses {
             margin-top: 1rem;
@@ -26,12 +26,12 @@
     <!-- navbar -->
     <nav>
         <div class="container nav_container">
-            <a href="index.html"><h4>EDUMANIA</h4></a>
+            <a href="./index.html"><h4>EDUMANIA</h4></a>
             <ul class="nav_menu">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="course.html">Course</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="./index.html">Home</a></li>
+                <li><a href="./about.html">About</a></li>
+                <li><a href="./course.html">Course</a></li>
+                <li><a href="./contact.html">Contact</a></li>
             </ul>
             <button id="open-menu-btn"><i class="fa-solid fa-bars"></i></button>
             <button id="close-menu-btn"><i class="fa-solid fa-close"></i></button>
@@ -45,67 +45,67 @@
         <div class="container courses_container">
             <article class="course">
                 <div class="course_image">
-                    <img src="images/Free Vector _ Code typing concept illustration.jfif" alt="">
+                    <img src="./images/Free Vector _ Code typing concept illustration.jfif" alt="">
                 </div>
                 <div class="course_info">
                     <h4>Fullstack Web Development</h4>
                     <p>Gain expertise in front-end and back-end development to build dynamic and interactive web applications.</p>
-                    <a href="course.html" class="btn btn-primary">Learn More</a>
+                    <a href="./course.html" class="btn btn-primary">Learn More</a>
                 </div>
             </article>
 
             <article class="course">
                 <div class="course_image">
-                    <img src="images/Bafta brochure covers – in pictures.jfif" alt="">
+                    <img src="./images/Bafta brochure covers – in pictures.jfif" alt="">
                 </div>
                 <div class="course_info">
                     <h4>Financial Management for Business Success</h4>
                     <p>Master the art of financial management and steer your organization towards sustainable growth and profitability.</p>
-                    <a href="course.html" class="btn btn-primary">Learn More</a>
+                    <a href="./course.html" class="btn btn-primary">Learn More</a>
                 </div>
             </article>
 
             <article class="course">
                 <div class="course_image">
-                    <img src="images/MLM Software based on smart contract.jfif" alt="">
+                    <img src="./images/MLM Software based on smart contract.jfif" alt="">
                 </div>
                 <div class="course_info">
                     <h4>Blockchain All in One Mastery </h4>
                     <p>Become a blockchain expert and harness the potential of decentralized technology with our comprehensive course.</p>
-                    <a href="course.html" class="btn btn-primary">Learn More</a>
+                    <a href="./course.html" class="btn btn-primary">Learn More</a>
                 </div>
             </article>
 
             <article class="course">
                 <div class="course_image">
-                    <img src="images/new3.jpg" alt="">
+                    <img src="./images/new3.jpg" alt="">
                 </div>
                 <div class="course_info">
                     <h4>Digital Marketing And SEO</h4>
                     <p> Master the strategies and tactics to succeed in the fast-paced world of online marketing by taking our course.</p>
-                    <a href="course.html" class="btn btn-primary">Learn More</a>
+                    <a href="./course.html" class="btn btn-primary">Learn More</a>
                 </div>
             </article>
 
             <article class="course">
                 <div class="course_image">
-                    <img src="images/new2.png" alt="">
+                    <img src="./images/new2.png" alt="">
                 </div>
                 <div class="course_info">
                     <h4>Project Management Course</h4>
                     <p>Acquire the tools and methodologies to effectively plan, execute, and deliver successful projects.</p>
-                    <a href="course.html" class="btn btn-primary">Learn More</a>
+                    <a href="./course.html" class="btn btn-primary">Learn More</a>
                 </div>
             </article>
 
             <article class="course">
                 <div class="course_image">
-                    <img src="images/new1.png" alt="">
+                    <img src="./images/new1.png" alt="">
                 </div>
                 <div class="course_info">
                     <h4>Entrepreneurship and Growth</h4>
                     <p> Learn the essential skills to launch and grow a successful business venture and grow yourself.</p>
-                    <a href="course.html" class="btn btn-primary">Learn More</a>
+                    <a href="./course.html" class="btn btn-primary">Learn More</a>
                 </div>
             </article>
         </div>
@@ -116,17 +116,17 @@
     <footer>
         <div class="container footer_container">
             <div class="footer_1">
-                <a href="index.html" class="footer_logo"><h4>EDUMANIA</h4></a>
+                <a href="./index.html" class="footer_logo"><h4>EDUMANIA</h4></a>
                 <p>Unlock your potential with our diverse range of online courses !</p>
             </div>
             
             <div class="footer_2">
                 <h4>Links</h4>
                 <ul class="permalinks">
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="course.html">Course</a></li>
-                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="./index.html">Home</a></li>
+                    <li><a href="./about.html">About</a></li>
+                    <li><a href="./course.html">Course</a></li>
+                    <li><a href="./contact.html">Contact</a></li>
                 </ul>
             </div>
 
@@ -159,7 +159,7 @@
     <!-- END Footer -->
 
 
-    <script src="js/script.js"></script>
+    <script src="./js/script.js"></script>
 
 </body>
 </html>
