--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Exo:wght@300;400;500;600;700;900&display=swap" rel="stylesheet">
     
     <!-- css -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
 
     <!-- swiper js -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"/>
@@ -24,12 +24,12 @@
     <!-- navbar -->
     <nav>
         <div class="container nav_container">
-            <a href="index.html"><h4>EDUMANIA</h4></a>
+            <a href="./index.html"><h4>EDUMANIA</h4></a>
             <ul class="nav_menu">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="course.html">Course</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="./index.html">Home</a></li>
+                <li><a href="./about.html">About</a></li>
+                <li><a href="./course.html">Course</a></li>
+                <li><a href="./contact.html">Contact</a></li>
             </ul>
             <button id="open-menu-btn"><i class="fa-solid fa-bars"></i></button>
             <button id="close-menu-btn"><i class="fa-solid fa-close"></i></button>
@@ -43,7 +43,7 @@
             <div class="header_left">
                 <h1>Develop your Skills By completing Courses</h1>
                 <p>Unlock your potential with our diverse range of online courses. Learn, grow, and thrive at your own pace.</p>
-                <a href="course.html" class="btn btn-primary">Enroll Now</a>
+                <a href="./course.html" class="btn btn-primary">Enroll Now</a>
             </div>
             <div class="header_right">
                 <div class="header_right-image">
@@ -109,7 +109,7 @@
                 <div class="course_info">
                     <h4>Fullstack Web Development</h4>
                     <p>Gain expertise in front-end and back-end development to build dynamic and interactive web applications.</p>
-                    <a href="course.html" class="btn btn-primary">Learn More</a>
+                    <a href="./course.html" class="btn btn-primary">Learn More</a>
                 </div>
             </article>
 
@@ -120,7 +120,7 @@
                 <div class="course_info">
                     <h4>Financial Management for Business Success</h4>
                     <p>Master the art of financial management and steer your organization towards sustainable growth and profitability.</p>
-                    <a href="course.html" class="btn btn-primary">Learn More</a>
+                    <a href="./course.html" class="btn btn-primary">Learn More</a>
                 </div>
             </article>
 
@@ -131,7 +131,7 @@
                 <div class="course_info">
                     <h4>Blockchain All in One Mastery </h4>
                     <p>Become a blockchain expert and harness the potential of decentralized technology with our comprehensive course.</p>
-                    <a href="course.html" class="btn btn-primary">Learn More</a>
+                    <a href="./course.html" class="btn btn-primary">Learn More</a>
                 </div>
             </article>
         </div>
@@ -208,7 +208,7 @@
         <div class="swiper-wrapper">
             <articlle class="testmonial swiper-slide">
                 <div class="avatar">
-                    <img src="images/DSC_0567.JPG" alt="">
+                    <img src="./images/DSC_0567.JPG" alt="">
                 </div>
                 <div class="testmonial_info">
                     <h5>Fazil Thekkan</h5>
@@ -220,7 +220,7 @@
             </articlle>
             <articlle class="testmonial swiper-slide">
                 <div class="avatar">
-                    <img src="images/matheus-ferrero-W7b3eDUb_2I-unsplash.jpg" alt="">
+                    <img src="./images/matheus-ferrero-W7b3eDUb_2I-unsplash.jpg" alt="">
                 </div>
                 <div class="testmonial_info">
                     <h5>Ashwathi</h5>
@@ -232,7 +232,7 @@
             </articlle>
             <articlle class="testmonial swiper-slide">
                 <div class="avatar">
-                    <img src="images/joseph-gonzalez-iFgRcqHznqg-unsplash.jpg" alt="">
+                    <img src="./images/joseph-gonzalez-iFgRcqHznqg-unsplash.jpg" alt="">
                 </div>
                 <div class="testmonial_info">
                     <h5>Philip Mark</h5>
@@ -244,7 +244,7 @@
             </articlle>
             <articlle class="testmonial swiper-slide">
                 <div class="avatar">
-                    <img src="images/ayo-ogunseinde-6W4F62sN_yI-unsplash.jpg" alt="">
+                    <img src="./images/ayo-ogunseinde-6W4F62sN_yI-unsplash.jpg" alt="">
                 </div>
                 <div class="testmonial_info">
                     <h5>Daicy Monica</h5>
@@ -256,7 +256,7 @@
             </articlle>
             <articlle class="testmonial swiper-slide">
                 <div class="avatar">
-                    <img src="images/jurica-koletic-7YVZYZeITc8-unsplash.jpg" alt="">
+                    <img src="./images/jurica-koletic-7YVZYZeITc8-unsplash.jpg" alt="">
                 </div>
                 <div class="testmonial_info">
                     <h5>priya</h5>
@@ -275,17 +275,17 @@
     <footer>
         <div class="container footer_container">
             <div class="footer_1">
-                <a href="index.html" class="footer_logo"><h4>EDUMANIA</h4></a>
+                <a href="./index.html" class="footer_logo"><h4>EDUMANIA</h4></a>
                 <p>Unlock your potential with our diverse range of online courses !</p>
             </div>
             
             <div class="footer_2">
                 <h4>Links</h4>
                 <ul class="permalinks">
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="course.html">Course</a></li>
-                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="./index.html">Home</a></li>
+                    <li><a href="./about.html">About</a></li>
+                    <li><a href="./course.html">Course</a></li>
+                    <li><a href="./contact.html">Contact</a></li>
                 </ul>
             </div>
 
@@ -319,7 +319,7 @@
 
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
-    <script src="js/script.js"></script>
+    <script src="./js/script.js"></script>
 
     <script>
         var swiper = new Swiper(".mySwiper", {
