--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Edumania</title>
+    <title>Edumania-Contact</title>
 
     <!-- fontawesome-icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
@@ -14,20 +14,20 @@
     <link href="https://fonts.googleapis.com/css2?family=Exo:wght@300;400;500;600;700;900&display=swap" rel="stylesheet">
     
     <!-- css -->
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/contact.css">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/contact.css">
 
 </head>
 <body>
     <!-- navbar -->
     <nav>
         <div class="container nav_container">
-            <a href="index.html"><h4>EDUMANIA</h4></a>
+            <a href="./index.html"><h4>EDUMANIA</h4></a>
             <ul class="nav_menu">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="course.html">Course</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="./index.html">Home</a></li>
+                <li><a href="./about.html">About</a></li>
+                <li><a href="./course.html">Course</a></li>
+                <li><a href="./contact.html">Contact</a></li>
             </ul>
             <button id="open-menu-btn"><i class="fa-solid fa-bars"></i></button>
             <button id="close-menu-btn"><i class="fa-solid fa-close"></i></button>
@@ -41,7 +41,7 @@
         <div class="container contact_container">
             <aside class="contact_aside">
                 <div class="aside_image">
-                    <img src="images/about.png" alt="">
+                    <img src="./images/about.png" alt="">
                 </div>
                 <h2>Contact US</h2>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolor, quis! At qui sed corrupti reprehenderit harum molestiae voluptates architecto accusamus.</p>
@@ -83,17 +83,17 @@
     <footer>
         <div class="container footer_container">
             <div class="footer_1">
-                <a href="index.html" class="footer_logo"><h4>EDUMANIA</h4></a>
+                <a href="./index.html" class="footer_logo"><h4>EDUMANIA</h4></a>
                 <p>Unlock your potential with our diverse range of online courses !</p>
             </div>
             
             <div class="footer_2">
                 <h4>Links</h4>
                 <ul class="permalinks">
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="course.html">Course</a></li>
-                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="./index.html">Home</a></li>
+                    <li><a href="./about.html">About</a></li>
+                    <li><a href="./course.html">Course</a></li>
+                    <li><a href="./contact.html">Contact</a></li>
                 </ul>
             </div>
 
@@ -126,7 +126,7 @@
     <!-- END Footer -->
 
 
-    <script src="js/script.js"></script>
+    <script src="./js/script.js"></script>
 
 </body>
 </html>
