Fixed Contact Page

--- a/contact.html
+++ b/contact.html
@@ -44,7 +44,7 @@
                     <img src="./images/about.png" alt="">
                 </div>
                 <h2>Contact US</h2>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolor, quis! At qui sed corrupti reprehenderit harum molestiae voluptates architecto accusamus.</p>
+                <p>Connect with us for inquiries, feedback, or assistance regarding our wide range of engaging online courses.</p>
                 <ul class="contact_details">
                     <li>
                         <i class="fa-solid fa-phone"></i>
